@@ -5,7 +5,7 @@ my $self = shift;
 my $call = uc shift;
 my $lccall = lc $call;
 
-return (0) if $self->priv < 8;
+return (1, $self->msg('e5')) if $self->priv < 5;
 return (1, $self->msg('e6')) unless $call gt ' ';
 return (1, $self->msg('already', $call)) if DXChannel->get($call);
 return (1, $self->msg('conscript', $lccall)) unless -e "$main::root/connect/$lccall";
